# Experiments

./: .gitignore  README.md
Basic Chemistry Visualizer/: Basic Chemistry Visualizer.csproj  Basic Chemistry Visualizer.sln  Test.tscn  icon.svg.import  project.godot
Basic Chemistry Visualizer/Main/: ElementEnum.cs  ElementEnum.cs.uid  Game.cs  Game.cs.uid  Game.tscn
Basic Chemistry Visualizer/Main/Chemical Elements/: Actinium.json  Aluminium.json  Americium.json  Antimony.json  Argon.json  (+113 more)
Basic Math Visualizer/: Lab.csproj  Lab.csproj.lscache  Lab.csproj.old.2  Lab.csproj.old.3  Lab.sln  icon.svg.import  project.godot
Basic Math Visualizer/Main/: Mouse.cs  Mouse.cs.uid  world2D.tscn  world3D.tscn
C++/: CMakeLists.txt  Main.cpp
C++/Engine/: Component.cpp  Entity.cpp  Entity.h
C++/src/: Main.cpp  OpenGL.cpp  OpenGLBasics.cpp  PlusUltra.h
C++/src/Depth/: Depth.h
C++/src/Engine/: Engine.cpp
C++/src/Math/: Vector.h  Vector2.cpp  Vector3.cpp
C++/src/Shaders/: shader.frag
Computer Simulator/: CMakeLists.txt  Main.cpp
Framework Testing/: Framework Testing.csproj  Framework Testing.sln  icon.svg.import  project.godot
Networking But C# only (No Godot)/: Networking But C# only (No Godot).csproj
Networking But C# only (No Godot)/Main/: Client.cs  Packet.cs  Program.cs  Server.cs
Networking Learning/: .editorconfig  Networking Learning.csproj  Networking Learning.csproj.old  Networking Learning.sln  icon.svg.import  project.godot
Shader Learning/: circle.png.import  game.tscn  icon.svg.import  project.godot  shader.gdshader  shader.gdshader.uid
(+117 files in other folders)
